# metgraph_survey

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01-WL.ipynb  03-Graph_Embeddings.ipynb  04-GCN_Embeddings.ipynb  05-LLNA.ipynb  06-Graph2Vec.ipynb  07-constrastive_loss.ipynb  08_GCNs.ipynb  09-MIL.ipynb  10-Mol2Vec.ipynb  11-Mol2Vec.ipynb  12-BfR.ipynb  13-fhm.ipynb  14-pprtv.ipynb  15-Graph2Vec-FHM.ipynb  16-Mol2Vec-fhm.ipynb  Untitled1.ipynb  mol2vec.model
reports/: survey_071024.docx  survey_130824.docx
reports/survey/: bibliography.bib  survey.docx  survey.html  survey.ipynb  survey.qmd  survey.tex
reports/survey/survey_files/libs/bootstrap/: bootstrap.min.css
